fix: reap leaked logcat processes and stop negotiating AOAP with storage sticks
Two things that made the app look far worse than it was on this head unit.

ODALog spawned a "logcat -f" per app launch and never reaped the previous one.
Being a separate process, it outlives the app being killed or crashing, so they
accumulated: the ten logs from one debugging session were all still being written
at the same second, pushing up to 2.1 MB/s onto the USB volume. Video frame rate
tracked the count exactly - ~30fps with two of them, 0-2fps with eight - and
audio was receiving under half the buffers it needed. It now records the child's
pid (via "exec" in a shell, so the pid stays valid) and kills a leftover on the
next launch, after confirming through /proc that the pid really is a logcat and
not a recycled one.

Note the filter is deliberately still "it.smg.hu:V" with no "*:S": a logcat
filterspec matches exact tags, and everything here logs under "ODA/<subtag>"
tags, so silencing the rest would empty the file entirely - and would also drop
the DEBUG/ActivityManager/AudioFlinger lines that make native crashes and ANRs
diagnosable. The shutdown pause also drops from 1500ms to 200ms, since it runs
on the caller's thread including the crash handler.

Separately, every USB attach and recovery pass tried the AOAP GET_PROTOCOL
request on whatever was plugged in - including the head unit's own log/media
stick (VID 0x090C), which can only ever fail. Eleven such failures were being
surfaced as connection errors, drowning out the real state of the link.
Negotiation now skips devices that expose only mass storage, hub or printer
interfaces. That list is deliberately short: a phone looks vendor-specific over
MTP, still-image over PTP and CDC/RNDIS while tethering, so excluding more would
risk ignoring a real phone. Covered by tests.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>